# middleware/authMiddleware.js
@@ -1,0 +1,18 @@
+const jwt = require('jsonwebtoken');
+const User = require('../models/userModel');
+
+module.exports = async (req, res, next) => {
+  const authHeader = req.headers.authorization;
+
+  if (!authHeader?.startsWith('Bearer '))
+    return res.status(401).json({ message: 'Unauthorized' });
+
+  try {
+    const token = authHeader.split(' ')[1];
+    const decoded = jwt.verify(token, process.env.JWT_SECRET);
+    req.user = await User.findById(decoded.userId).select('-password');
+    next();
+  } catch {
+    res.status(401).json({ message: 'Invalid token' });
+  }
+};
