# models/contact.js
@@ -1,11 +1,19 @@
-const mongoose = require("mongoose");
+// models/contact.js
+const mongoose = require('mongoose');
 
 const contactSchema = new mongoose.Schema({
-  firstName: String,
-  lastName: String,
-  email: String,
+  firstName: { type: String, required: true },
+  lastName:  { type: String, required: true },
+  email:     { type: String, required: true },
   favoriteColor: String,
-  birthday: String,
+  birthday:  String,
+  userId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'user'
+  }
 });
 
-module.exports = mongoose.model("Contact", contactSchema);
+module.exports = mongoose.model('Contact', contactSchema);
+
+
+
