# routes/contacts.js
@@ -1,11 +1,9 @@
 const express = require('express');
+const { getContacts, createContact } = require('../controllers/contactController');
+const auth = require('../middleware/authMiddleware');
 const router = express.Router();
-const controller = require('../controllers/contactsController');
 
-router.get('/', controller.getAllContacts);
-router.get('/:id', controller.getContactById);
-router.post('/', controller.createContact);
-router.put('/:id', controller.updateContact);
-router.delete('/:id', controller.deleteContact);
+router.get('/', auth, getContacts);
+router.post('/', auth, createContact);
 
 module.exports = router;
